# copilot-changelog

./: .gitignore  Makefile  README.md  copilot_changelog_to_discord.py  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/prompts/: copilot-changelog-discord-scaffold.prompt.md
.github/workflows/: post-updates.yml
tests/: test_helpers.py
